codebase/rdicidr-0.1.0/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsl-deployment
  namespace: production
  labels:
    app: fsl-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
        - name: fsl-app
          image: carloshdez/fsl-challenge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
