codebase/rdicidr-0.1.0/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  selector:
    app: fsl-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
