codebase/rdicidr-0.1.0/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsl-ingress
  namespace: production

spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsl-service
                port:
                  number: 8080
    - host: fsl-challenge.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsl-service
                port:
                  number: 8080
